# IOT_Runtime_Monte-Carlo_SaaS_V1

./: README.md  app_streamlit.py  quick_test_api.py  requirements.txt
battery_feasibility_full/: AA_alkaline_lab_validated.json  CR2032_lab_corrected.json  CR2450_lab_corrected.json  CR2477_lab_corrected.json  README.md  api.py  app_streamlit.py  example_battery.json  pyproject.toml
battery_feasibility_full/battery_feasibility/: __init__.py  config.py
battery_feasibility_full/battery_feasibility.egg-info/: SOURCES.txt  requires.txt
battery_feasibility_full/battery_feasibility/analytics/: __init__.py  outputs.py  plots.py  sensitivity.py
battery_feasibility_full/battery_feasibility/api/: __init__.py  app.py
battery_feasibility_full/battery_feasibility/models/: __init__.py  battery.py  load.py  uncertainty.py
battery_feasibility_full/battery_feasibility/simulation/: __init__.py  monte_carlo.py
battery_feasibility_full/scripts/: demo_coin_cell.py
