[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-feasibility"
version = "0.1.0"
description = "V1 Coin Cell probabilistic battery feasibility engine"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0"
]
